final commit before reinstall
fix gitconfig (and test ssh and gpg)

--- a/fontconfig/.config/fontconfig/conf.d/71-Regular-fonts.conf
+++ b/fontconfig/.config/fontconfig/conf.d/71-Regular-fonts.conf
@@ -12,7 +12,7 @@
   <alias>
     <family>serif</family>
     <prefer>
-      <family>Noto Serif</family>
+      <family>IBM Plex Sans</family>
     </prefer>
   </alias>
 
