--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -1,5 +1,5 @@
 [include]
-  path = ~/.gitconfig.local
+  path = ~/.config/git/local
 [user]
   name = Chinmay Dalal
   signingkey = 2C930DF41C88D2A3
