--- a/desktop/.config/sway/config
+++ b/desktop/.config/sway/config
@@ -3,7 +3,7 @@ exec autotiling
 exec mkfifo $SWAYSOCK.wob && tail -f $SWAYSOCK.wob | wob --border=0 --background-color=#c01d2021 --bar-color=#80ebdbb2 --padding=2
 exec emacs --daemon
 exec_always --no-startup-id workstyle &> /tmp/workstyle.log
-
+exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 for_window [title="ptpython"] floating enable, border normal, resize set width 500 px height 500 px
 
@@ -51,9 +51,9 @@ set $hard_black #000000
 
 
 # Colors                border        background  text          indicator child_border
-client.focused          $xgray5       $xgray1     $white        $yellow   $green
+client.focused          $xgray5       $xgray1     $white        $yellow   $xgray1
 client.focused_inactive $xgray3       $xgray3     $bright_black $xgray3   $xgray3
-client.unfocused        $green        $xgray1     $bright_black $xgray1   $xgray1
+client.unfocused        $xgray1       $xgray1     $bright_black $xgray1   $xgray1
 client.urgent           $red          $xgray1     $red          $red      $red
 client.placeholder      $xgray3       $hard_black $bright_black $xgray3   $xgray3
 client.background       $black
