--- a/fontconfig/.config/fontconfig/conf.d/71-Regular-fonts.conf
+++ b/fontconfig/.config/fontconfig/conf.d/71-Regular-fonts.conf
@@ -12,7 +12,7 @@
   <alias>
     <family>serif</family>
     <prefer>
-      <family>IBM Plex Sans</family>
+      <family>IBM Plex Serif</family>
     </prefer>
   </alias>
 
