--- a/desktop/.config/sway/config
+++ b/desktop/.config/sway/config
@@ -1,317 +1,11 @@
-# Read `man 5 sway` for a complete reference.
-exec autotiling
-exec mkfifo $SWAYSOCK.wob && tail -f $SWAYSOCK.wob | wob --border=0 --background-color=#c01d2021 --bar-color=#80ebdbb2 --padding=2
-exec emacs --daemon
-exec_always workstyle &> /tmp/workstyle.log
-exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+include ~/.config/sway/autostart
+include ~/.config/sway/options
+include ~/.config/sway/theming
+include ~/.config/sway/mappings
 
-for_window [title="ptpython"] floating enable, border normal, resize set width 500 px height 500 px
-
-exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP
-exec hash dbus-update-activation-environment 2>/dev/null && \
-     dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
-
-font Fantasque Sans Mono 12
-# Colors
-
-set $black #1C1B19
-set $bright_black #1e1e1e
-
-set $red #cd3131
-set $bright_red #f14c4c
-
-set $green #608b4e
-set $bright_green #b5cea8
-
-set $yellow #CE9178
-set $bright_yellow #DCDCAA
-
-set $blue #2472c8
-set $bright_blue #569cd6
-
-set $magenta #C586C0
-set $bright_magenta #daadd6
-
-set $cyan #11a8cd
-set $bright_cyan #9cdcfe
-
-set $white #e5e5e5
-set $bright_white #e5e5e5
-
-set $orange #D75F00
-set $bright_orange #FF8700
-
-set $xgray1 #262626
-set $xgray2 #303030
-set $xgray3 #3A3A3A
-set $xgray4 #444444
-set $xgray5 #4E4E4E
-
-set $hard_black #000000
-
-
-# Colors                border        background  text          indicator child_border
-client.focused          $xgray5       $xgray1     $white        $yellow   $xgray1
-client.focused_inactive $xgray3       $xgray3     $xgray5       $xgray3   $xgray3
-client.unfocused        $xgray1       $xgray1     $xgray5       $xgray1   $xgray1
-client.urgent           $red          $xgray1     $red          $red      $red
-client.placeholder      $xgray3       $hard_black $xgray5       $xgray3   $xgray3
-client.background       $black
-
-# Clipman
-exec wl-paste -t text --watch clipman store
-### Variables
-#
-# Set Num Lock on
-input * xkb_numlock enable
-# Logo key. Use Mod1 for Alt.
-set $mod Mod4
-# Home row direction keys, like vim
-set $left h
-set $down j
-set $up k
-set $right l
-# Your preferred terminal emulator
-set $term wezterm
-# Your preferred application launcher
-# Note: pass the final command to swaymsg so that the resulting window can be opened
-# on the original workspace that the command was run on.
-#set $menu dmenu_path | dmenu | xargs swaymsg exec --
-set $menu wofi --show=drun | xargs swaymsg exec --
-
-### Output configuration
-#
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/) -- use azote
-exec ~/.azotebg
-
-gaps outer 3
-gaps inner 7
-
-#
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
-
-### Idle configuration
-#
-# Example configuration:
-#
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-#          before-sleep 'swaylock -f -c 000000'
-#
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
-
-### Input configuration
-#
-# Example configuration:
-#
-#   input "2:14:SynPS/2_Synaptics_TouchPad" {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
-#
-# You can get the names of your inputs by running: swaymsg -t get_inputs
-# Read `man 5 sway-input` for more information about this section.
-
-### Key bindings
-#
-# Basics:
-#
-    # Start a terminal
-    bindsym $mod+Return exec $term
-    default_border none
-
-    #wofer
-    bindsym $mod+p exec ~/wofer/wofer.sh
-    # Kill focused window
-    bindsym $mod+q kill
-
-    # Start your launcher
-    bindsym $mod+d exec $menu
-    bindsym $mod+o exec wofi --show=run | xargs swaymsg exec --
-    # switch to csd
-    bindsym $mod+g border csd
-    # switch to no border
-    bindsym $mod+m border none
-
-    # Drag floating windows by holding down $mod and left mouse button.
-    # Resize them with right mouse button + $mod.
-    # Despite the name, also works for non-floating windows.
-    # Change normal to inverse to use left mouse button for resizing and right
-    # mouse button for dragging.
-    floating_modifier $mod normal
-
-    # Reload the configuration file
-    bindsym $mod+Shift+c reload
-
-    # Clipman
-    bindsym $mod+c exec clipman pick -t wofi
-
-    # grimshot
-    bindsym Print exec grim - | swappy -f -
-    bindsym Ctrl+Print exec grim -g "$(slurp)" - | swappy -f -
-    bindsym $mod+Print exec swappy_window.sh
-
-    #playerctl
-    bindsym Mod1+XF86AudioRaiseVolume exec playerctl next
-    bindsym Mod1+XF86AudioLowerVolume exec playerctl previous
-    bindsym Mod1+XF86AudioMute exec playerctl play-pause
-
-    #volume
-    bindsym XF86AudioRaiseVolume exec pamixer -ui 5 && pamixer --get-volume > $SWAYSOCK.wob
-    bindsym XF86AudioLowerVolume exec pamixer -ud 5 && pamixer --get-volume > $SWAYSOCK.wob
-    bindsym XF86AudioMute exec pamixer --toggle-mute && ( pamixer --get-mute && echo 0 > $SWAYSOCK.wob ) || pamixer --get-volume > $SWAYSOCK.wob
-
-    #brightness
-    bindsym Ctrl+XF86AudioRaiseVolume exec brillo -A 5 -q && brillo -G -q | cut -d'.' -f1 > $SWAYSOCK.wob
-    bindsym Ctrl+XF86AudioLowerVolume exec brillo -U 5 -q && brillo -G -q | cut -d'.' -f1 > $SWAYSOCK.wob
-    # swaylock
-    bindsym $mod+Shift+m exec swaylock -i ~/Pictures/wall.png --effect-greyscale
-
-    # Exit sway (logs you out of your Wayland session)
-    bindsym $mod+Shift+e exec nwgbar
-    bindsym $mod+n exec makoctl menu wofi -d -p 'Choose Action: '
-    bindsym $mod+x exec makoctl dismiss
-    bindsym $mod+Shift+d exec wldash
-#
-# Moving around:
-#
-    # Move your focus around
-    bindsym $mod+$left focus left
-    bindsym $mod+$down focus down
-    bindsym $mod+$up focus up
-    bindsym $mod+$right focus right
-    # Or use $mod+[up|down|left|right]
-    bindsym $mod+Left focus left
-    bindsym $mod+Down focus down
-    bindsym $mod+Up focus up
-    bindsym $mod+Right focus right
-
-    # Move the focused window with the same, but add Shift
-    bindsym $mod+Shift+$left move left
-    bindsym $mod+Shift+$down move down
-    bindsym $mod+Shift+$up move up
-    bindsym $mod+Shift+$right move right
-    # Ditto, with arrow keys
-    bindsym $mod+Shift+Left move left
-    bindsym $mod+Shift+Down move down
-    bindsym $mod+Shift+Up move up
-    bindsym $mod+Shift+Right move right
-#
-# Workspaces:
-#
-    # Switch to workspace
-    bindsym $mod+1 workspace number 1
-    bindsym $mod+2 workspace number 2
-    bindsym $mod+3 workspace number 3
-    bindsym $mod+4 workspace number 4
-    bindsym $mod+5 workspace number 5
-    bindsym $mod+6 workspace number 6
-    bindsym $mod+7 workspace number 7
-    bindsym $mod+8 workspace number 8
-    bindsym $mod+9 workspace number 9
-    bindsym $mod+0 workspace number 10
-    # Move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace number 1
-    bindsym $mod+Shift+2 move container to workspace number 2
-    bindsym $mod+Shift+3 move container to workspace number 3
-    bindsym $mod+Shift+4 move container to workspace number 4
-    bindsym $mod+Shift+5 move container to workspace number 5
-    bindsym $mod+Shift+6 move container to workspace number 6
-    bindsym $mod+Shift+7 move container to workspace number 7
-    bindsym $mod+Shift+8 move container to workspace number 8
-    bindsym $mod+Shift+9 move container to workspace number 9
-    bindsym $mod+Shift+0 move container to workspace number 10
-    # Note: workspaces can have any name you want, not just numbers.
-    # We just use 1-10 as the default.
-#
-# Layout stuff:
-#
-    # You can "split" the current object of your focus with
-    # $mod+b or $mod+v, for horizontal and vertical splits
-    # respectively.
-    bindsym $mod+b splith
-    bindsym $mod+v splitv
-
-    # Switch the current container between different layout styles
-    bindsym $mod+s layout stacking
-    bindsym $mod+w layout tabbed
-    bindsym $mod+e layout toggle split
-
-    # Make the current focus fullscreen
-    bindsym $mod+f fullscreen
-
-    # Toggle the current focus between tiling and floating mode
-    bindsym $mod+Shift+space floating toggle
-
-    # Swap focus between the tiling area and the floating area
-    bindsym $mod+space focus mode_toggle
-
-    # Move focus to the parent container
-    bindsym $mod+a focus parent
-#
-# Scratchpad:
-#
-    # Sway has a "scratchpad", which is a bag of holding for windows.
-    # You can send windows there and get them back later.
-
-    # Move the currently focused window to the scratchpad
-    bindsym $mod+Shift+minus move scratchpad
-
-    # Show the next scratchpad window or hide the focused scratchpad window.
-    # If there are multiple scratchpad windows, this command cycles through them.
-    bindsym $mod+minus scratchpad show
-#
-# Resizing containers:
-#
-mode "resize" {
-    # left will shrink the containers width
-    # right will grow the containers width
-    # up will shrink the containers height
-    # down will grow the containers height
-    bindsym $left resize shrink width 10px
-    bindsym $down resize grow height 10px
-    bindsym $up resize shrink height 10px
-    bindsym $right resize grow width 10px
-
-    # Ditto, with arrow keys
-    bindsym Left resize shrink width 10px
-    bindsym Down resize grow height 10px
-    bindsym Up resize shrink height 10px
-    bindsym Right resize grow width 10px
-
-    # Return to default mode
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-}
-bindsym $mod+r mode "resize"
-
-#
-# Status Bar:
-#
-# Read `man 5 sway-bar` for more information about this section.
 bar {
     position top
-
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-    swaybar_command waybar 
+    swaybar_command waybar
 }
 
-set $gnome-schema org.gnome.desktop.interface
-
-exec_always {
-    gsettings set $gnome-schema gtk-theme 'Adwaita-dark'
-    gsettings set $gnome-schema icon-theme 'Adwaita++-Dark'
-    gsettings set $gnome-schema cursor-theme 'Adwaita'
-    gsettings set $gnome-schema font-name 'Fira Sans 11'
-}
 include /etc/sway/config.d/*
