--- a/desktop/.config/workstyle/config.toml
+++ b/desktop/.config/workstyle/config.toml
@@ -9,39 +9,25 @@
 # Note if multiple patterns are present in the same application name,
 # precedence is given in order of apparition in this file.
 
+"wezterm" = ""
 "github" = ""
-"amazon" = ""
-"reddit" = ""
-"youtube" = ""
-"twitch" = ""
-"twitter" = ""
-"gitlab" = ""
-"clojure" = ""
-"hacker news" = ""
-"discord" = "ﭮ"
-"wikipedia" = ""
-"whatsapp" = ""
 "rust" = ""
+"meet" = ""
+"google" = ""
 "private browsing" = ""
 "firefox" = ""
-"kitty" = ""
-"wezterm" = ""
-"zsh" = ""
 "file manager" = ""
 "libreoffice calc" = ""
 "libreoffice writer" = ""
+"libreoffice" = ""
+"nvim" = ""
 "gthumb" = ""
-"image" = ""
 "menu" = ""
 "calculator" = ""
-"fragments" = ""
+"transmission" = ""
 "videostream" = ""
 "mpv" = ""
 "music" = ""
 "disk usage" = ""
 ".pdf" = ""
-".djvu" = ""
-"thunderbird" = "﫯"
-"mail" = "﫯"
-"nvim" = ""
-"emacs" = "Em"
+"discord" = "ﭮ"
