* mildly rice waybar and wofi * fix latex export * dap * rainbow definitions

--- a/desktop/.config/mako/config
+++ b/desktop/.config/mako/config
@@ -1,5 +1,4 @@
-background-color=#1e1e1e
+background-color=#3c3c3c
 font=JetBrains Mono 9.8
-text-color=#D4D4D4
-border-color=#C586C0
+border-color=#000000
 border-radius=3
