--- a/desktop/.config/waybar/config.jsonc
+++ b/desktop/.config/waybar/config.jsonc
@@ -98,7 +98,7 @@
         "tooltip": false
     },
     "custom/pacman": {
-        "format": "{} ",
+        "format": "{} ",
         "interval": 3600,                     // every hour
         "exec": "checkupdates | wc -l",       // # of updates
         "exec-if": "exit 0",                  // always run; consider advanced run conditions
