* nvim-dap setup * rust snippets * Mako borders * Fix workstyle autostart * Sway borders, colours, fonts * Waybar - nm-applet * Cleanup init.lua * Use `<cmd>` instead of `:` for mappings, add dap mappings

--- a/desktop/.config/mako/config
+++ b/desktop/.config/mako/config
@@ -1,4 +1,4 @@
-background-color=#3c3c3c
+background-color=#191622
 font=JetBrains Mono 9.8
-border-color=#000000
-border-radius=3
+border-color=#FFB86c
+border-radius=0
