--- a/cli-tools/.config/pistol/pistol.conf
+++ b/cli-tools/.config/pistol/pistol.conf
@@ -1,7 +1,4 @@
-text/* bat --paging=never --color=always %pistol-filename%
+text/* bat --paging=auto --color=always %pistol-filename%
 text/html w3m -T text/html -dump %pistol-filename%
 inode/directory exa -l %pistol-filename%
 image/* wezterm imgcat %pistol-filename%
-
-
-
